--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,6 @@ on:
       - 'v5/openapi.yaml'
       - 'v5/openapi.json'
 
-
 jobs:
   sync-to-postman:
     runs-on: ubuntu-latest
@@ -48,7 +47,7 @@ jobs:
             -p \
             --pretty
 
-      - name: Update Postman Collection
+      - name: Version and Create New Postman Collection
         env:
           POSTMAN_API_KEY: ${{ secrets.POSTMAN_API_KEY }}
           COLLECTION_UID: ${{ secrets.POSTMAN_COLLECTION_UID }}
